k8s/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: togglemaster-auth
---
apiVersion: v1
kind: Namespace
metadata:
  name: togglemaster-flags
---
apiVersion: v1
kind: Namespace
metadata:
  name: togglemaster-targeting
---
apiVersion: v1
kind: Namespace
metadata:
  name: togglemaster-evaluation
---
apiVersion: v1
kind: Namespace
metadata:
  name: togglemaster-analytics
