k8s/analytics-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service
  namespace: togglemaster-analytics
  labels:
    app: analytics-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics-service
  template:
    metadata:
      labels:
        app: analytics-service
    spec:
      serviceAccountName: analytics-sa
      containers:
        - name: analytics-service
          image: 740868193407.dkr.ecr.us-east-1.amazonaws.com/analytics-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8005
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 8005
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8005
            initialDelaySeconds: 10
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  namespace: togglemaster-analytics
spec:
  selector:
    app: analytics-service
  ports:
    - port: 8005
      targetPort: 8005
  type: ClusterIP
