k8s/evaluation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evaluation-service
  namespace: togglemaster-evaluation
  labels:
    app: evaluation-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: evaluation-service
  template:
    metadata:
      labels:
        app: evaluation-service
    spec:
      serviceAccountName: evaluation-sa
      containers:
        - name: evaluation-service
          image: 740868193407.dkr.ecr.us-east-1.amazonaws.com/evaluation-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8004
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 8004
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8004
            initialDelaySeconds: 10
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: evaluation-service
  namespace: togglemaster-evaluation
spec:
  selector:
    app: evaluation-service
  ports:
    - port: 8004
      targetPort: 8004
  type: ClusterIP
