k8s/targeting-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: targeting-service
  namespace: togglemaster-targeting
  labels:
    app: targeting-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: targeting-service
  template:
    metadata:
      labels:
        app: targeting-service
    spec:
      containers:
        - name: targeting-service
          image: 740868193407.dkr.ecr.us-east-1.amazonaws.com/targeting-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8003
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 8003
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8003
            initialDelaySeconds: 10
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: targeting-service
  namespace: togglemaster-targeting
spec:
  selector:
    app: targeting-service
  ports:
    - port: 8003
      targetPort: 8003
  type: ClusterIP
